| Bug #8167 | cluster shared memory and mysqld signal usage clash | ||
|---|---|---|---|
| Submitted: | 27 Jan 2005 18:50 | Modified: | 28 Jan 2005 11:19 |
| Reporter: | Tomas Ulin | ||
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S1 (Critical) |
| Version: | 4.1.10, 5.0.3 | OS: | Any (any) |
| Assigned to: | Tomas Ulin | Target Version: | |
[27 Jan 2005 18:50]
Tomas Ulin
[28 Jan 2005 0:47]
Tomas Ulin
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
