Bug#8167  signal usage clash between mysql server and ndb shared memory     added shared memory config parameter, signum for use in signalling     added global variable for holdign signum to be used for shared memory connection     only fiddle with signals if it is set     simplified common ndb client option handling